feat(processor): format generated sources on demand
Add the opt-in arez.format_generated_source processor option for Arez-generated component sources. The default path continues to write JavaPoet output unchanged, while the enabled path formats generated source with palantir-java-format before writing through the Filer.

Shade and relocate the formatter dependency closure inside the processor jar, excluding annotation-only jsr305 to avoid unsafe javax.annotation relocation. Add formatted fixture coverage, missing-export diagnostics, isolated processorpath smoke validation, and documentation for the required JDK exports.